_includes/manuals/1.2/4.2.2_puppet_classes.md

Puppet classes are generally imported from the PuppetMaster(s) via the Import button on the Puppet Classes page. Then can also be created by hand, and manually assoicated with a set of environments (for filtering purposes).

#### Importing Classes

Go to *More -> Configuration -> Puppet Classes* and click the Import button. This will not be visible unless you have at least one PuppetMaster with a puppet-enabled Smart Proxy

##### Ignoring classes on import

It's often to have a module structure like this:


{% highlight sh %}
$ tree git/
git/
└── manifests
    ├── init.pp
    ├── install.pp
    ├── params.pp
    └── repo.pp
{% endhighlight %}

In this situation, Foreman would offer to create:

{% highlight sh %}
git
git::install
git::params
git::repo
{% endhighlight %}

However, if we know that the subclasses are not intended for direct consumption, but are only really part of the internal structure of the module, then we would want to exclude those from the import mechanism, so that Foreman only offers to import *git*. We can achieve this via the file *config/ignored_environments.yml*. This file takes a set of regular expressions - any class which matches one of them will not be imported. So, for this example, we might configure:

{% highlight sh %}
:filters:
  - !ruby/regexp '/install$/'
  - !ruby/regexp '/params$/'
  - !ruby/regexp '/repo$/'
{% endhighlight %}

#### Assigning Classes to Hosts

To cause Puppet to apply your classes, you will need to assign them to your Hosts. This can be done at either an individual host level, or at a gorup level. The process is the same; edit the Host(group), select an Enviroment, and then got to the Puppet Classes tab and select what classes you wan in this Host(Group).

##### Checking the results

To see how Foreman is passing the classes to Puppet, go to a Host and click the YAML button. You will be shown the exact YAML data sent to the PuppetMaster -the classes will be in the "classes" hash.
